# unbake-lyrics-sync

./: .env.example  .gitignore  README.md  pyproject.toml  requests.http
app/: __init__.py  config.py  dependencies.py  main.py  repository.py  routes.py  schemas.py  service.py
app/pipeline/: __init__.py  formatting.py  orchestrator.py  preprocessing.py  retrieval.py  transcription.py  types.py
datasets/: README.md  benchmark_manifest.jsonl  benchmark_manifest.template.jsonl  manifest.example.jsonl
docs/: design.md  evaluation-results.md  postgres-schema.sql  reviewer-checklist.md
evaluation/: __init__.py  cli.py  metrics.py  reporting.py  run_asr.py
results/: README.md  metrics.json  predictions.jsonl
tests/: test_formatting.py  test_metrics.py  test_reporting.py  test_run_asr.py  test_schemas.py
